--- a/Study/CriminalIntent/app/src/main/AndroidManifest.xml
+++ b/Study/CriminalIntent/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
         <activity android:name=".CrimeListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -15,7 +15,9 @@
         </activity>
         <activity
             android:name=".CrimePagerActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".CrimeListActivity"/>
         </activity>
     </application>
 
