--- a/Study/CriminalIntent/app/src/main/AndroidManifest.xml
+++ b/Study/CriminalIntent/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.yalin.criminalintent" >
 
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,6 +20,11 @@
             android:label="@string/app_name">
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                 android:value=".CrimeListActivity"/>
+        </activity>
+
+        <activity android:name=".CrimeCameraActivity"
+                  android:screenOrientation="landscape"
+                  android:label="@string/app_name">
         </activity>
     </application>
 
