--- a/Study/CriminalIntent/app/src/main/AndroidManifest.xml
+++ b/Study/CriminalIntent/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
 
         <activity android:name=".CrimeCameraActivity"
+                  android:exported="true"
                   android:screenOrientation="landscape"
                   android:label="@string/app_name">
         </activity>
